k8s/shoppingapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingapi
  namespace: distributed-systems
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shoppingapi
  template:
    metadata:
      labels:
        app: shoppingapi
    spec:
      containers:
      - name: shoppingapi
        image: ghcr.io/professornova/distributed-systems:latest
        ports:
        - containerPort: 3000
