k8s/shoppingapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingapi
  namespace: distributed-systems
spec:
  type: ClusterIP
  selector:
    app: shoppingapi
  ports:
  - port: 80
    targetPort: 3000
